--- a/template/doingu-giaovien-detail.html
+++ b/template/doingu-giaovien-detail.html
@@ -696,7 +696,7 @@
                                                             </tbody>
                                                         </table>
                                                     </div>
-                                                    <div class="teacher-col">
+                                                    <div class="teacher-col mt-20">
                                                         <table class="teacher-tab">
                                                             <tbody>
                                                                 <tr>
