--- a/template/home.html
+++ b/template/home.html
@@ -359,7 +359,7 @@
         <main class="main">
             <div class="banners">
                 <div class="banners-wrapper">
-                    <div class="swiper-custom">
+                    <div class="swiper-banner">
                         <div class="swiper">
                             <div class="swiper-wrapper">
                                 <div class="swiper-slide">
@@ -383,10 +383,17 @@
                                                 </div>
 
                                                 <div class="banners-video">
+                                                    <!-- <div class="video-play"></div>
                                                     <video width="370px" height="250px" class="box-video"
                                                         poster="./img/bg-video.png" controls="controls" preload="none">
                                                         <source src="./img/video.mp4" type="video/mp4" />
-                                                    </video>
+                                                    </video> -->
+                                                    <a class="popup-video" href="http://www.youtube.com/watch?v=xD8Xchuxq8g">
+                                                        <div class="video-play">
+                                                            <img src="./img/svg/icon-play.svg" alt="icon-play.svg">
+                                                        </div>
+                                                        <img src="./img/bg-video.png" alt="bg-video.png" class="bg-video">
+                                                    </a>
                                                 </div>
                                             </div>
                                         </div>
@@ -413,10 +420,12 @@
                                                 </div>
 
                                                 <div class="banners-video">
-                                                    <video width="370px" height="250px" class="box-video"
-                                                        poster="./img/bg-video.png" controls="controls" preload="none">
-                                                        <source src="./img/video.mp4" type="video/mp4" />
-                                                    </video>
+                                                    <a class="popup-video" href="http://www.youtube.com/watch?v=xD8Xchuxq8g">
+                                                        <div class="video-play">
+                                                            <img src="./img/svg/icon-play.svg" alt="icon-play.svg">
+                                                        </div>
+                                                        <img src="./img/bg-video.png" alt="bg-video.png" class="bg-video">
+                                                    </a>
                                                 </div>
                                             </div>
                                         </div>
@@ -443,10 +452,12 @@
                                                 </div>
 
                                                 <div class="banners-video">
-                                                    <video width="370px" height="250px" class="box-video"
-                                                        poster="./img/bg-video.png" controls="controls" preload="none">
-                                                        <source src="./img/video.mp4" type="video/mp4" />
-                                                    </video>
+                                                    <a class="popup-video" href="http://www.youtube.com/watch?v=xD8Xchuxq8g">
+                                                        <div class="video-play">
+                                                            <img src="./img/svg/icon-play.svg" alt="icon-play.svg">
+                                                        </div>
+                                                        <img src="./img/bg-video.png" alt="bg-video.png" class="bg-video">
+                                                    </a>
                                                 </div>
                                             </div>
                                         </div>
