--- a/template/sass/core/__code.scss
+++ b/template/sass/core/__code.scss
@@ -18,6 +18,10 @@
     font-family: 'HJ Gotham Round';
 }
 
+ul,ol{
+    padding: 0;
+}
+
 .seami-label {
     position: relative;
     display: flex;
