--- a/template/css/style.css
+++ b/template/css/style.css
@@ -749,6 +749,10 @@ sup {
   font-family: "HJ Gotham Round";
 }
 
+ul, ol {
+  padding: 0;
+}
+
 .seami-label {
   position: relative;
   display: flex;
@@ -2901,6 +2905,11 @@ sup {
   position: absolute;
   bottom: 45px;
 }
+@media screen and (max-width: 1023px) {
+  .banners .swiper-pagination {
+    bottom: 15px;
+  }
+}
 .banners .swiper-pagination .swiper-pagination-bullet {
   background-color: #fff;
   opacity: 1;
@@ -2911,15 +2920,56 @@ sup {
 .banners .swiper-pagination .swiper-pagination-bullet-active {
   background-color: #EA412C;
 }
+.banners .banners-wrap {
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
 .banners .banners-inner {
-  height: 700px;
   display: flex;
-  align-items: flex-end;
-  padding-bottom: 90px;
+  flex-wrap: wrap;
+  align-items: center;
+  padding: 360px 0 90px;
+}
+@media screen and (max-width: 1900px) {
+  .banners .banners-inner {
+    padding: 300px 0 90px;
+  }
+}
+@media screen and (max-width: 1199px) {
+  .banners .banners-inner {
+    padding: 270px 0 70px;
+  }
+}
+@media screen and (max-width: 1023px) {
+  .banners .banners-inner {
+    padding: 220px 0 50px;
+  }
+}
+@media screen and (max-width: 767px) {
+  .banners .banners-inner {
+    flex-direction: column-reverse;
+    padding: 40px 0;
+  }
 }
 .banners .banners-inner .banners-title {
   line-height: 1.2;
   margin-bottom: 30px;
+}
+@media screen and (max-width: 1199px) {
+  .banners .banners-inner .banners-title {
+    margin-bottom: 20px;
+  }
+}
+@media screen and (max-width: 1023px) {
+  .banners .banners-inner .banners-title {
+    margin-bottom: 15px;
+  }
+}
+@media screen and (max-width: 576px) {
+  .banners .banners-inner .banners-title {
+    margin-bottom: 10px;
+  }
 }
 .banners .banners-inner .banners-desc {
   line-height: 1.5;
@@ -2928,9 +2978,94 @@ sup {
   width: calc(100% - 370px);
   padding-right: 100px;
 }
+@media screen and (max-width: 1199px) {
+  .banners .banners-inner .banners-text {
+    padding-right: 20px;
+    width: calc(100% - 330px);
+  }
+}
+@media screen and (max-width: 1023px) {
+  .banners .banners-inner .banners-text {
+    width: calc(100% - 280px);
+  }
+}
+@media screen and (max-width: 767px) {
+  .banners .banners-inner .banners-text {
+    width: 100%;
+    padding-right: 0;
+  }
+}
 .banners .banners-inner .banners-video {
   width: 370px;
   height: 250px;
+  position: relative;
+}
+@media screen and (max-width: 1199px) {
+  .banners .banners-inner .banners-video {
+    width: 330px;
+    height: 230px;
+  }
+}
+@media screen and (max-width: 1023px) {
+  .banners .banners-inner .banners-video {
+    width: 280px;
+    height: 200px;
+  }
+}
+@media screen and (max-width: 767px) {
+  .banners .banners-inner .banners-video {
+    width: 100%;
+    margin-bottom: 10px;
+  }
+}
+.banners .banners-inner .banners-video .popup-video {
+  position: relative;
+  display: block;
+  height: 100%;
+  max-width: 360px;
+  margin: 0 auto;
+}
+.banners .banners-inner .banners-video .popup-video .video-play {
+  width: 36px;
+  height: 36px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+.banners .banners-inner .banners-video .popup-video .video-play img {
+  width: 100%;
+  height: 100%;
+}
+.banners .banners-inner .banners-video .popup-video .video-play:before {
+  content: "";
+  width: 80px;
+  height: 80px;
+  border: 1px solid rgba(255, 255, 255, 0.8);
+  border-radius: 100%;
+  z-index: -1;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+.banners .banners-inner .banners-video .popup-video .video-play:after {
+  content: "";
+  width: 60px;
+  height: 60px;
+  background-color: rgba(255, 255, 255, 0.8);
+  border-radius: 100%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: -2;
+}
+.banners .banners-inner .banners-video .popup-video .bg-video {
+  width: 100%;
+  height: 100%;
+  max-width: 100%;
+  object-fit: cover;
 }
 .banners .banners-inner .banners-video video {
   width: 100%;
@@ -3262,19 +3397,24 @@ html .mfp-wrap {
 }
 .mfp-content .mfp-close {
   transition: 0.3s;
-  right: 0;
   width: 20px;
   height: 20px;
   background-color: #EA412C;
   color: #fff;
   border-radius: 100%;
-  top: 50px;
-  right: 10px;
   line-height: 20px;
   font-size: 16px;
   opacity: 1;
   text-align: center;
   padding: 0;
+}
+.mfp-content .mfp-figure .mfp-close {
+  top: 50px;
+  right: 10px;
+}
+.mfp-content .mfp-iframe-scaler .mfp-close {
+  top: -30px;
+  right: 0px;
 }
 .mfp-content .popup-wrap {
   display: -webkit-flex;
@@ -3870,10 +4010,10 @@ html .mfp-wrap {
 }
 @media screen and (max-width: 1023px) {
   .slide-video-row.col-video .column {
-    width: calc(100% /2);
+    width: calc(100% / 2);
   }
 }
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 576px) {
   .slide-video-row.col-video .column {
     width: 100%;
   }
@@ -4459,6 +4599,7 @@ html .mfp-wrap {
 
 .team-teacher-detail {
   padding: 60px 0 80px;
+  overflow: hidden;
 }
 @media screen and (max-width: 1199px) {
   .team-teacher-detail {
@@ -4484,11 +4625,37 @@ html .mfp-wrap {
 .team-teacher-detail .column.teacher-ig {
   width: calc(100% / 12 * 3);
 }
+@media screen and (max-width: 991px) {
+  .team-teacher-detail .column.teacher-ig {
+    width: calc(100% / 12 * 3.5);
+  }
+}
+@media screen and (max-width: 767px) {
+  .team-teacher-detail .column.teacher-ig {
+    width: 100%;
+  }
+}
 .team-teacher-detail .column.teacher-tx {
   width: calc(100% / 12 * 9);
 }
+@media screen and (max-width: 991px) {
+  .team-teacher-detail .column.teacher-tx {
+    width: calc(100% / 12 * 8.5);
+  }
+}
+@media screen and (max-width: 767px) {
+  .team-teacher-detail .column.teacher-tx {
+    width: 100%;
+  }
+}
 .team-teacher-detail .teacher-avatar {
   margin-bottom: 15px;
+}
+@media screen and (max-width: 767px) {
+  .team-teacher-detail .teacher-avatar {
+    width: 50%;
+    margin: 0 auto 15px;
+  }
 }
 .team-teacher-detail .teacher-avatar img {
   width: 100%;
@@ -4501,6 +4668,11 @@ html .mfp-wrap {
 }
 .team-teacher-detail .teacher-ig-content .teacher-name {
   margin-bottom: 35px;
+}
+@media screen and (max-width: 991px) {
+  .team-teacher-detail .teacher-ig-content .teacher-name {
+    margin-bottom: 20px;
+  }
 }
 .team-teacher-detail .teacher-ig-content .teacher-contact {
   width: 130px;
@@ -4532,22 +4704,74 @@ html .mfp-wrap {
 .team-teacher-detail .teacher-ig-content .teacher-contact:hover::after {
   filter: none;
 }
-.team-teacher-detail .teacher-box {
+.team-teacher-detail .teacher-inner {
   padding-left: 40px;
+}
+@media screen and (max-width: 1199px) {
+  .team-teacher-detail .teacher-inner {
+    padding-left: 20px;
+  }
+}
+@media screen and (max-width: 991px) {
+  .team-teacher-detail .teacher-inner {
+    padding-left: 10px;
+  }
+}
+@media screen and (max-width: 767px) {
+  .team-teacher-detail .teacher-inner {
+    padding-left: 0;
+  }
 }
 .team-teacher-detail .teacher-box:not(:first-child) {
   margin-top: 25px;
 }
+@media screen and (max-width: 1023px) {
+  .team-teacher-detail .teacher-box:not(:first-child) {
+    margin-top: 20px;
+  }
+}
 .team-teacher-detail .teacher-box .teacher-tt {
   margin-bottom: 15px;
 }
+@media screen and (max-width: 1023px) {
+  .team-teacher-detail .teacher-box .teacher-tt {
+    margin-bottom: 10px;
+  }
+}
 .team-teacher-detail .teacher-box .teacher-cols {
   display: flex;
+  flex-wrap: wrap;
   margin: 0 -25px;
+}
+@media screen and (max-width: 1199px) {
+  .team-teacher-detail .teacher-box .teacher-cols {
+    margin: 0 -15px;
+  }
+}
+@media screen and (max-width: 991px) {
+  .team-teacher-detail .teacher-box .teacher-cols {
+    margin: 0;
+  }
 }
 .team-teacher-detail .teacher-box .teacher-col {
   width: 50%;
   padding: 0 25px;
+}
+@media screen and (max-width: 1199px) {
+  .team-teacher-detail .teacher-box .teacher-col {
+    padding: 0 15px;
+  }
+}
+@media screen and (max-width: 991px) {
+  .team-teacher-detail .teacher-box .teacher-col {
+    width: 100%;
+    padding: 0;
+  }
+}
+@media screen and (max-width: 991px) {
+  .team-teacher-detail .teacher-box .teacher-col.mt-20 {
+    margin-top: 20px;
+  }
 }
 .team-teacher-detail .teacher-box .teacher-desc {
   list-style-type: disc;
@@ -4583,6 +4807,12 @@ html .mfp-wrap {
 
 .white-popup-block.block-t-contact {
   padding: 25px;
+  border-radius: 4px;
+}
+@media screen and (max-width: 767px) {
+  .white-popup-block.block-t-contact {
+    padding: 20px;
+  }
 }
 .white-popup-block.block-t-contact .mfp-close {
   top: 15px;
@@ -4603,12 +4833,32 @@ html .mfp-wrap {
   display: flex;
   align-items: flex-end;
   justify-content: space-between;
+  flex-wrap: wrap;
 }
 .teacher-popup .teacher-group:not(:first-child) {
   margin-top: 35px;
 }
+@media screen and (max-width: 1023px) {
+  .teacher-popup .teacher-group:not(:first-child) {
+    margin-top: 25px;
+  }
+}
+@media screen and (max-width: 767px) {
+  .teacher-popup .teacher-group:not(:first-child) {
+    margin-top: 0;
+  }
+}
+.teacher-popup .teacher-group:first-child .teacher-f:first-child {
+  margin-top: 0;
+}
 .teacher-popup .teacher-group .teacher-f {
   width: calc(50% - 15px);
+}
+@media screen and (max-width: 767px) {
+  .teacher-popup .teacher-group .teacher-f {
+    width: 100%;
+    margin-top: 25px;
+  }
 }
 .teacher-popup .teacher-f {
   width: 100%;
@@ -4661,12 +4911,22 @@ html .mfp-wrap {
 .teacher-popup .mt-35 {
   margin-top: 35px;
 }
+@media screen and (max-width: 1023px) {
+  .teacher-popup .mt-35 {
+    margin-top: 25px;
+  }
+}
 .teacher-popup textarea.f-control {
   border-radius: 4px;
   border-color: rgba(0, 0, 0, 0.2);
   padding: 20px 25px;
   height: 100px !important;
   resize: none;
+}
+@media screen and (max-width: 767px) {
+  .teacher-popup textarea.f-control {
+    padding: 10px 15px;
+  }
 }
 .teacher-popup textarea.f-control::placeholder {
   color: rgba(0, 0, 0, 0.6);
@@ -4677,6 +4937,11 @@ html .mfp-wrap {
 }
 .teacher-popup .teacher-accept {
   margin-top: 23px;
+}
+@media screen and (max-width: 767px) {
+  .teacher-popup .teacher-accept {
+    margin-top: 15px;
+  }
 }
 .teacher-popup .teacher-accept .label input {
   display: none;
@@ -4727,6 +4992,11 @@ html .mfp-wrap {
   justify-content: center;
   cursor: pointer;
 }
+@media screen and (max-width: 767px) {
+  .teacher-popup .f-submit {
+    margin-top: 15px;
+  }
+}
 .teacher-popup .f-submit:hover {
   color: #EA412C;
   background-color: #fff;
@@ -4762,11 +5032,26 @@ html .mfp-wrap {
     margin-bottom: 30px;
   }
 }
+@media screen and (max-width: 767px) {
+  .achi-student .achi-head {
+    margin-bottom: 20px;
+  }
+}
 .achi-student .achi-head .seami-label {
   justify-content: center;
 }
 .achi-student .column {
   width: calc(100% / 3);
+}
+@media screen and (max-width: 1199px) {
+  .achi-student .column {
+    width: calc(100% / 2);
+  }
+}
+@media screen and (max-width: 576px) {
+  .achi-student .column {
+    width: 100%;
+  }
 }
 .achi-student .achi-box {
   box-shadow: 10px 10px 30px rgba(0, 0, 0, 0.16);
@@ -4804,14 +5089,30 @@ html .mfp-wrap {
   margin-top: auto;
   background-color: #fff;
 }
+@media screen and (max-width: 767px) {
+  .achi-student .achi-box .achi-info {
+    padding: 10px 15px;
+  }
+}
 .achi-student .achi-box .achi-info .achi-avatar img {
   width: 60px;
   height: 60px;
   border-radius: 100%;
   max-width: 100%;
 }
+@media screen and (max-width: 767px) {
+  .achi-student .achi-box .achi-info .achi-avatar img {
+    width: 50px;
+    height: 50px;
+  }
+}
 .achi-student .achi-box .achi-info .achi-act {
   padding-left: 13px;
+}
+@media screen and (max-width: 1199px) {
+  .achi-student .pagination {
+    margin-top: 30px;
+  }
 }
 
 .classroom {
@@ -4837,6 +5138,11 @@ html .mfp-wrap {
 @media screen and (max-width: 1199px) {
   .classroom .room-head {
     margin-bottom: 30px;
+  }
+}
+@media screen and (max-width: 1023px) {
+  .classroom .room-head {
+    margin-bottom: 20px;
   }
 }
 .classroom .room-inner {
@@ -4905,6 +5211,11 @@ html .mfp-wrap {
   margin-bottom: 20px;
   margin: -5px;
 }
+@media screen and (max-width: 1199px) {
+  .classroom .grid {
+    margin: 0;
+  }
+}
 .classroom .grid::after {
   content: "";
   display: block;
@@ -4913,6 +5224,12 @@ html .mfp-wrap {
 .classroom .grid-sizer,
 .classroom .grid-item {
   width: 25%;
+}
+@media screen and (max-width: 991px) {
+  .classroom .grid-sizer,
+.classroom .grid-item {
+    width: 50%;
+  }
 }
 .classroom .grid-item {
   height: auto;
