--- a/template/sass/components/__banner.scss
+++ b/template/sass/components/__banner.scss
@@ -1,68 +1,178 @@
 .banners {
-	.swiper-wrapper {
-		margin: 0;
+    .swiper-wrapper {
+        margin: 0;
+    }
+
+    .swiper-slide {
+        padding: 0;
+        height: 100%;
+    }
+
+    .swiper-slide>img {
+        width: 100%;
+        height: auto;
+        object-fit: cover;
+    }
+
+    .swiper-button-prev {
+        left: 20px;
+    }
+
+    .swiper-button-next {
+        right: 20px;
+    }
+
+    .swiper-pagination {
+        position: absolute;
+        bottom: 45px;
+		@include max-media($bk-d-1024){
+			bottom: 15px;
+		}
+
+        .swiper-pagination-bullet {
+            background-color: $w-cl;
+            opacity: 1;
+            width: 8px;
+            height: 8px;
+            margin: 0 7px;
+
+            &-active {
+                background-color: $main-cl;
+            }
+        }
+    }
+
+    color: $w-cl;
+
+	.banners-wrap{
+		background-repeat: no-repeat;
+		background-position: center;
+		background-size: cover;
 	}
-	.swiper-slide {
-		padding: 0;
-		height: 100%;
-	}
-	.swiper-slide > img {
-		width: 100%;
-		height: auto;
-		object-fit: cover;
-	}
-	.swiper-button-prev { 
-		left: 20px;
-	}
-	.swiper-button-next {
-		right: 20px;
-	}
-	.swiper-pagination {
-		position: absolute;
-		bottom: 45px;
-		.swiper-pagination-bullet{
-			background-color: $w-cl;
-			opacity: 1;
-			width: 8px;
-			height: 8px;
-			margin: 0 7px;
-	
-			&-active{
-				background-color: $main-cl;
+
+    .banners-inner {
+        display: flex;
+		flex-wrap: wrap;
+        align-items: center;
+        padding: 360px 0 90px;
+		@include max-media($bk-1900){
+			padding: 300px 0 90px;
+		}
+		@include max-media($bk-d-1200){
+			padding: 270px 0 70px;
+		}
+		@include max-media($bk-d-1024){
+			padding: 220px 0 50px;
+		}
+		@include max-media($bk-d-768){
+			flex-direction: column-reverse;
+			padding: 40px 0;
+		}
+
+        .banners-title {
+            line-height: 1.2;
+            margin-bottom: 30px;
+			@include max-media($bk-d-1200){
+				margin-bottom: 20px;
 			}
-		}
-	}
+			@include max-media($bk-d-1024){
+				margin-bottom: 15px;
+			}
+			@include max-media($bk-576){
+				margin-bottom: 10px;
+			}
+        }
 
-	color: $w-cl;
-	.banners-inner{
-		height: 700px;
-		display: flex;
-		// align-items: center;
-		align-items: flex-end;
-		padding-bottom: 90px;
-		.banners-title{
-			line-height: 1.2;
-			margin-bottom: 30px;
-		}
+        .banners-desc {
+            line-height: 1.5;
+        }
 
-		.banners-desc{
-			line-height: 1.5;
-		}
-		
-		.banners-text{
-			width: calc(100% - 370px);
-			padding-right: 100px;
-		}
-
-		.banners-video{
-			width: 370px;
-			height: 250px;
-			video{
+        .banners-text {
+            width: calc(100% - 370px);
+            padding-right: 100px;
+			@include max-media($bk-d-1200){
+				padding-right: 20px;
+				width: calc(100% - 330px);
+			}
+			@include max-media($bk-d-1024){
+				width: calc(100% - 280px);
+			}
+			@include max-media($bk-d-768){
 				width: 100%;
-				object-fit: cover;
-				background-size: cover;
+				padding-right: 0;
 			}
-		}
-		
-	}
+        }
+
+        .banners-video {
+            width: 370px;
+            height: 250px;
+            position: relative;
+			@include max-media($bk-d-1200){
+				width: 330px;
+				height: 230px;
+			}
+			@include max-media($bk-d-1024){
+				width: 280px;
+				height: 200px;
+			}
+			@include max-media($bk-d-768){
+				width: 100%;
+				margin-bottom: 10px;
+			}
+
+            .popup-video {
+                position: relative;
+				display: block;
+				height: 100%;
+				max-width: 360px;
+				margin: 0 auto;
+                .video-play {
+                    width: 36px;
+                    height: 36px;
+                    @include pos-mid;
+					img{
+						width: 100%;
+						height: 100%;
+					}
+                	&:before{
+						content: '';
+                		width: 80px;
+                		height: 80px;
+                		border: 1px solid rgba($color: $w-cl, $alpha: .8);
+                		border-radius: 100%;
+                		z-index: -1;
+                		@include pos-mid;
+                	}
+
+                	&:after{
+						content: '';
+						width: 60px;
+                		height: 60px;
+                		background-color: rgba($color: $w-cl, $alpha: .8);
+                		border-radius: 100%;
+                		@include pos-mid;
+                		z-index: -2;
+                	}
+                }
+
+				.bg-video{
+					width: 100%;
+					height: 100%;
+					max-width: 100%;
+					object-fit: cover;
+				}
+            }
+
+
+
+            video {
+                width: 100%;
+                object-fit: cover;
+                background-size: cover;
+            }
+        }
+
+
+
+    }
 }
