--- a/template/sass/components/__popup.scss
+++ b/template/sass/components/__popup.scss
@@ -1,86 +1,117 @@
 html {
-	.mfp-bg {
-		z-index: 999998;
-	}
-	.mfp-wrap {
-		z-index: 999999;
-	}
+    .mfp-bg {
+        z-index: 999998;
+    }
+
+    .mfp-wrap {
+        z-index: 999999;
+    }
 }
+
 .mfp-zoom-in {
-	.mfp-content {
-		opacity: 0;
-		transition: all 0.2s ease-in-out;
-		transform: scale(0.8);
-	}
-	&.mfp-bg {
-		opacity: 0;
-		transition: all 0.3s ease-out;
-	}
-	&.mfp-ready {
-		.mfp-content {
-			opacity: 1;
-			transform: scale(1);
-		}
-		&.mfp-bg {
-			opacity: 0.8;
-		}
-	}
-	&.mfp-removing {
-		.mfp-content {
-			transform: scale(0.8);
-			opacity: 0;
-		}
-		&.mfp-bg {
-			opacity: 0;
-		}
-	}
+    .mfp-content {
+        opacity: 0;
+        transition: all 0.2s ease-in-out;
+        transform: scale(0.8);
+    }
+
+    &.mfp-bg {
+        opacity: 0;
+        transition: all 0.3s ease-out;
+    }
+
+    &.mfp-ready {
+        .mfp-content {
+            opacity: 1;
+            transform: scale(1);
+        }
+
+        &.mfp-bg {
+            opacity: 0.8;
+        }
+    }
+
+    &.mfp-removing {
+        .mfp-content {
+            transform: scale(0.8);
+            opacity: 0;
+        }
+
+        &.mfp-bg {
+            opacity: 0;
+        }
+    }
 }
+
 .mfp-container {
-	padding: 0;
-	overflow-y: auto;
-	@include custom-scrollbar(2px);
+    padding: 0;
+    overflow-y: auto;
+    @include custom-scrollbar(2px);
 }
+
 .mfp-content {
-	max-width: 600px;
-	.mfp-close {
-		transition: 0.3s;
-		right: 0;
-		width: 20px;
-		height: 20px;
-		background-color: $main-cl;
-		color: $w-cl;
-		border-radius: 100%;
-		top: 50px;
-		right: 10px;
-		line-height: 20px;
-		font-size: 16px;
-		opacity: 1;
-		text-align: center;
-		padding: 0;
-	}
-	.popup-wrap {
-		@include flex-mid;
-		> div {
-			width: 100%;
-		}
+    max-width: 600px;
+
+    .mfp-close {
+        transition: 0.3s;
+        // right: 0;
+        width: 20px;
+        height: 20px;
+        background-color: $main-cl;
+        color: $w-cl;
+        border-radius: 100%;
+        // top: 50px;
+        // right: 10px;
+        line-height: 20px;
+        font-size: 16px;
+        opacity: 1;
+        text-align: center;
+        padding: 0;
+    }
+	
+	.mfp-figure{
+		.mfp-close {
+            top: 50px;
+            right: 10px;
+        }
 	}
 
-	.mfp-counter{
-		display: none;
-	}
+    .mfp-iframe-scaler {
+        .mfp-close {
+            top: -30px;
+            right: 0px;
+        }
+
+    }
+
+    .popup-wrap {
+        @include flex-mid;
+
+        >div {
+            width: 100%;
+        }
+    }
+
+    .mfp-counter {
+        display: none;
+    }
 }
+
 .stop-scrolling {
-	position: relative;
-	overflow: hidden;
-	touch-action: none;
-	-webkit-overflow-scrolling: auto;
+    position: relative;
+    overflow: hidden;
+    touch-action: none;
+    -webkit-overflow-scrolling: auto;
 }
+
 .popup-wrap {
-	display: none;
+    display: none;
 }
+
 .swal2-popup.swal2-show {
-	font-size: 14px;
+    font-size: 14px;
 }
+
 .swal2-shown {
-	padding-right: 0 !important;
+    padding-right: 0 !important;
 }
