--- a/template/sass/style.scss
+++ b/template/sass/style.scss
@@ -52,6 +52,8 @@
 @import './page/_phonghoc-thietbi';
 @import './page/_amnhac-nghethuat';
 @import './page/_seami-congchung';
+@import './page/_seami-sukien';
+@import './page/_gallery';
 
 
 
